--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Stay organized with this clean and simple To-Do App. Add, manage, and track your daily tasks easily.">
+    <meta name="robots" content="index, follow">
+    <meta name="keywords" content="To-Do App, task manager, productivity, daily planner, checklist">
+    <meta name="author" content="Md Kaif">
     <title>TO-DO</title>
     <link rel="stylesheet" href="output.css">
     <link rel="stylesheet" href="style.css">
